--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-react": "^7.13.13",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
@@ -11,19 +14,21 @@
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "babel-jest": "^26.6.3",
     "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
     "redux-devtools-extension": "^2.13.9",
+    "redux-testkit": "^1.0.6",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -45,6 +50,15 @@
     ]
   },
   "devDependencies": {
-    "@types/ramda": "^0.27.40"
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.12.1",
+    "@types/enzyme": "^3.10.8",
+    "@types/ramda": "^0.27.40",
+    "@types/react-test-renderer": "^17.0.1",
+    "@types/redux-testkit": "^1.0.5",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
+    "jest": "^26.6.0",
+    "react-test-renderer": "^17.0.2"
   }
 }
